fixing text align of label

--- a/style.css
+++ b/style.css
@@ -82,3 +82,7 @@ input[type="text"] {
   padding: 2px 8px;
   background-position: center center;
 } */
+
+.label-content {
+  text-align: right;
+}
